fixed spacing, added tries left

--- a/main.css
+++ b/main.css
@@ -1,3 +1,11 @@
+body {
+    text-align: center;
+}
+
+h2 {
+    margin-top: 60px;
+}
+
 #incorrect-letters {
     border: 1px solid black;
     width: 175px;
@@ -7,4 +15,20 @@
 
 #game-area {
     visibility: hidden;
+}
+
+table {
+    margin: 30px auto;
+    padding: 20px;
+}
+
+.letter-space {
+    width: 30px;
+    height: 30px;
+    text-align: center;
+    border-bottom: 1px solid black;
+}
+
+.spacer {
+    width: 15px;
 }
